k8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bc-demo
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: app
              servicePort: 4000
    - http:
        paths:
          - path: /
            backend:
              serviceName: keycloak
              servicePort: 9620
